<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BREAKOUT</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo_description">LOGO</string>
    <string name="action_settings">Settings</string>
    <string name="menu_text_single_player">Single Player</string>
    <string name="menu_text_multi_player">Multiple Players</string>
    <string name="menu_text_score">My Score</string>
    <string name="menu_text_help">Help</string>
    <string name="menu_text_quit">Quit The Game</string>
    <string name="menu_text_challenge">CHALLENGE</string>
    <string name="menu_text_arcade">ARCADE</string>
    <string name="title_activity_main">Breakout</string>
    <string name="title_activity_score">My Score</string>
    <string name="title_activity_mapselection">Select a map</string>
    <string name="list_text_score">Score</string>
    <string name="list_text_level">Level</string>
    <string name="list_text_time">Time</string>
    <string name="title_activity_score_board">ScoreBoardActivity</string>
    <string name="local_scoreboard">Local Scoreboard</string>
    <string name="global_scoreboard">Global Scoreboard</string>
    <string name="title_activity_mode_selection">ModeSelectionActivity</string>
    <string name="text_playername_hint">Player Name</string>
    <string name="text_ok">OK</string>
    <string name="dialog_text_score">Score:</string>
    <string name="dialog_text_level">Level:</string>
    <string name="dialog_text_player">Player:</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_title">HELP</string>
    <string name="help_game_description">In the classic Breakout game, you will control a paddle to prevent a ball from going pass it. Ball is bounced off paddle to destroy blocks. Player is scored based on time taken to destroy all blocks.</string>
    <string name="help_challenge_description">In Challenge mode, you can challenge 3 interesting local levels. If these are too easy for you, then You can choose to download 3 more difficult levels from the server. </string>
    <string name="help_arcade_description">There is no end in Arcade Mode. You will challenge yourself against inifite blocks for getting higher score. When you get a high score, you can upload it to the server to get ranked.</string>
    <string name="help_ball_description">The ball will bounce back when it collides with other objects and it will remove the block when collision occurs. You can lauch the ball by simply touching the paddle. </string>
    <string name="help_paddle_description">You can control the paddle to prevent the ball from dropping by moving it with your finger.</string>
    <string name="help_block_green_description">You will get 5 scores as reward when it was removed from the screen.</string>
    <string name="help_block_blue_description">You will get 5 scores and one extra life as reward when it was removed from the screen.</string>
    <string name="help_block_orange_description">You will get 5 scores and a larger paddle as reward when it was removed from the screen.</string>
    
    
</resources>
