<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.unimelb.breakout.activity.WelcomeActivity">
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	    <Button
	        android:id="@+id/button_single_player"
	        android:layout_width="@dimen/menu_button_width"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:gravity="center"
	        android:text="@string/menu_text_single_player" />
	    
	    <Button
	        android:id="@+id/button_multi_player"
	        android:layout_width="@dimen/menu_button_width"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/button_single_player"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	        android:text="@string/menu_text_multi_player" />
	
	    <Button
	        android:id="@+id/button_score"
	        android:layout_width="@dimen/menu_button_width"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/button_multi_player"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	        android:text="@string/menu_text_score" />
	
	    <Button
	        android:id="@+id/button_quit"
	        android:layout_width="@dimen/menu_button_width"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/button_score"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	        android:text="@string/menu_text_quit" />
	    
	</RelativeLayout>
</ScrollView>
