<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.unimelb.breakout.activity.HelpActivity" >
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@color/white_transparent"
        >
        <RelativeLayout 
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:padding="10dp"
            >
            <TextView 
                android:id="@+id/help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_title"
                android:textSize="@dimen/huge_text"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                />
            
             <TextView 
                android:id="@+id/help_game_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:layout_below="@id/help_title"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                
                />
             
             <TextView 
                android:id="@+id/help_game_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_game_description"
                android:textSize="@dimen/medium_text"
                android:layout_below="@id/help_game_label"
                android:layout_alignParentLeft="true"
                />
             
             <TextView 
                android:id="@+id/help_challenge_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_text_challenge"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:layout_below="@id/help_game_description"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                
                />
             
             <TextView 
                android:id="@+id/help_challenge_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_challenge_description"
                android:textSize="@dimen/medium_text"
                android:layout_below="@id/help_challenge_label"
                android:layout_alignParentLeft="true"
                />
             
             <TextView 
                android:id="@+id/help_arcade_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_text_arcade"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:layout_below="@id/help_challenge_description"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                
                />
             
             <TextView 
                android:id="@+id/help_arcade_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_arcade_description"
                android:textSize="@dimen/medium_text"
                android:layout_below="@id/help_arcade_label"
                android:layout_alignParentLeft="true"
                />
             
              <ImageView 
                android:id="@+id/help_ball_label"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ball_red"
				android:contentDescription="ball"
                android:layout_below="@id/help_arcade_description"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                
                />
             
             <TextView 
                android:id="@+id/help_ball_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_ball_description"
                android:textSize="@dimen/medium_text"
                android:layout_below="@id/help_ball_label"
                android:layout_alignParentLeft="true"
                />
                          
              <ImageView 
                android:id="@+id/help_paddle_label"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:background="@drawable/paddle_yellow"
				android:contentDescription="ball"
                android:layout_below="@id/help_ball_description"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                
                />
             
             <TextView 
                android:id="@+id/help_paddle_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_paddle_description"
                android:textSize="@dimen/medium_text"
                android:layout_below="@id/help_paddle_label"
                android:layout_alignParentLeft="true"
                />
             
              <ImageView 
                android:id="@+id/help_block_green_label"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_green"
				android:contentDescription="ball"
                android:layout_below="@id/help_paddle_description"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                
                />
             
             <TextView 
                android:id="@+id/help_block_green_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_block_green_description"
                android:textSize="@dimen/medium_text"
                android:layout_below="@id/help_block_green_label"
                android:layout_alignParentLeft="true"
                />
             
             <ImageView 
                android:id="@+id/help_block_blue_label"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/btn"
				android:contentDescription="ball"
                android:layout_below="@id/help_block_green_description"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                
                />
             
             <TextView 
                android:id="@+id/help_block_blue_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_block_blue_description"
                android:textSize="@dimen/medium_text"
                android:layout_below="@id/help_block_blue_label"
                android:layout_alignParentLeft="true"
                />
             
             <ImageView 
                android:id="@+id/help_block_orange_label"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_orange"
				android:contentDescription="ball"
                android:layout_below="@id/help_block_blue_description"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                
                />
             
             <TextView 
                android:id="@+id/help_block_orange_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_block_orange_description"
                android:textSize="@dimen/medium_text"
                android:layout_below="@id/help_block_orange_label"
                android:layout_alignParentLeft="true"
                />
             
        </RelativeLayout>
        
    </ScrollView>

</RelativeLayout>
