<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.unimelb.breakout.activity.WelcomeActivity"
    android:background="@drawable/background"
    android:orientation="vertical">
    
    <ImageView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/logo"
	    android:layout_gravity="center_horizontal"
	    android:contentDescription="@string/logo_description"
    />
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    >
    
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:layout_gravity="center">
		
		    <Button
		        android:id="@+id/button_challenge"
		        android:layout_width="@dimen/menu_button_width"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:background="@drawable/btn"
		        android:textColor="@color/white"
		        android:gravity="center"
		        android:text="@string/menu_text_challenge" />
		    
		    <Button
		        android:id="@+id/button_arcade"
		        android:layout_width="@dimen/menu_button_width"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/button_challenge"
		        android:layout_centerHorizontal="true"
		        android:background="@drawable/btn"
		        android:textColor="@color/white"
		        android:layout_marginTop="20dp"
		        android:gravity="center"
		        android:text="@string/menu_text_arcade" />
		    
		</RelativeLayout>
	</ScrollView>
</LinearLayout>
