<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:background="@drawable/list_bg2"
    >

    <TextView
        android:id="@+id/list_player_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:gravity="center_horizontal"
		android:layout_gravity="center_horizontal"
        android:text="@string/list_text_level"
        android:textSize="30sp" />
	
      <TextView
      android:id="@+id/label_nodata"  
	   android:layout_width="fill_parent"  
	   android:layout_height="wrap_content"  
	   android:text="No data available"
	   android:gravity="center"
	   android:layout_weight="0.1" 	   
	   android:visibility="gone"
	   android:textSize="@dimen/large_text"
  	/>  
  	
 <LinearLayout
     android:id="@+id/labels"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="10dp"
     android:paddingRight="10dp" >
    
  <TextView
      android:id="@+id/list_label_one"  
	   android:layout_width="fill_parent"  
	   android:layout_height="wrap_content"  
	   android:text="@string/list_text_level"
	   android:gravity="center"
	   android:layout_weight="1" 	   
	   android:textSize="@dimen/large_text"
  	/>  
   
   <TextView
       android:id="@+id/list_label_two"  
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
	    android:gravity="center"
	    android:textSize="@dimen/large_text"
       android:text="@string/list_text_score" />
    
  <TextView  
       android:id="@+id/list_label_three"  
	   android:layout_width="fill_parent"  
	   android:layout_height="wrap_content"  
       android:text="@string/list_text_time"
       android:gravity="center"
	   android:textSize="@dimen/large_text"
	   android:layout_weight="1"
  />  
     
</LinearLayout>

	<ListView    
	    android:layout_width="fill_parent"   
	    android:layout_height="0dip"  
	    android:layout_weight=".8" 
	    android:id="@+id/scorelist"  
    />  
</LinearLayout>